# OpenGL_Simple_Clock

./: .gitignore.txt  CMakeLists.txt  README.md
glad/include/glad/: glad.h
glad/src/: glad.c
scripts/: build.bat  clean.bat
src/: helper.cpp  helper.h  main.cpp
